token added try

--- a/ITC.InfoTrack/appsettings.json
+++ b/ITC.InfoTrack/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"PostgresConnection": "Host=localhost;Database=InfoTrackDB;User Id=postgres;Password=root;Timeout=60;"
     "PostgresConnection": "Host=localhost;Database=INFOTRACK_DB;User Id=postgres;Password=root;Timeout=60;"
+    //"PostgresConnection": "Host=localhost;Database=INFOTRACK_DB;User Id=postgres;Password=root;Timeout=60;"
   },
   "Jwt": {
     "Key": "DaVcXthZZiEDFX9q4QuIKT07eb69EN1k",
