Image Insert Successfull

--- a/ITC.InfoTrack/appsettings.json
+++ b/ITC.InfoTrack/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ImageStorage": {
+    "TokenImagePath": "D:\\InfotrackImage" // Windows example
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgresConnection": "Host=localhost;Database=INFOTRACK_DB;User Id=postgres;Password=root;Timeout=60;"
