--- a/ITC.InfoTrack/appsettings.json
+++ b/ITC.InfoTrack/appsettings.json
@@ -10,7 +10,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Database=INFOTRACK_DB;User Id=postgres;Password=root;Timeout=60;"
+    //"PostgresConnection": "Host=localhost;Database=INFOTRAX_DB;User Id=postgres;Password=root;Timeout=60;"
+    "PostgresConnection": "Host=192.168.11.148;Port=5432;Database=INFOTRAX_DB;User Id=postgres;Password=root;Timeout=60;"
+    //"Host=192.168.11.148;Port=5432;Database=YourDatabaseName;Username=postgres;Password=YourPassword"
     //"PostgresConnection": "Host=localhost;Database=INFOTRACK_DB;User Id=postgres;Password=root;Timeout=60;"
   },
   "Jwt": {
