Login with jwt token using for mobile device

--- a/ITC.InfoTrack/ITC.InfoTrack.csproj
+++ b/ITC.InfoTrack/ITC.InfoTrack.csproj
@@ -74,10 +74,12 @@
 
   <ItemGroup>
     <Folder Include="Areas\Login\Views\" />
+    <Folder Include="Areas\MobileApps\Views\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.36" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.36">
       <PrivateAssets>all</PrivateAssets>
