--- a/ITC.InfoTrack/appsettings.json
+++ b/ITC.InfoTrack/appsettings.json
@@ -15,9 +15,12 @@
     //"Host=192.168.11.148;Port=5432;Database=YourDatabaseName;Username=postgres;Password=YourPassword"
     //"PostgresConnection": "Host=localhost;Database=INFOTRACK_DB;User Id=postgres;Password=root;Timeout=60;"
   },
+  "Secret-Key": {
+    "X-Secret_Key": "Gopon_Code"
+  },
   "Jwt": {
     "Key": "DaVcXthZZiEDFX9q4QuIKT07eb69EN1k",
-    "Issuer": "http://192.168.10.196:44383",
-    "Audience": "http://192.168.10.196:44383"
+    "Issuer": "http://192.168.11.148:44383",
+    "Audience": "http://192.168.11.148:44383"
   }
 }
